--- a/.tmuxp.yaml
+++ b/.tmuxp.yaml
@@ -6,7 +6,7 @@ windows:
     # shell_command_before:
     #   - cd ~/ # run as a first command in all panes
     panes:
-      - bun run dev
+      - npm run dev
       # - echo second pane # pane no. 2
       # - echo third pane # pane no. 3
       # - echo fourth pane # pane no. 4
